fdo#51688 fdo#66745: drawinglayer: properly restore anti-aliasing mode

VclPixelProcessor2D: the constructor changes the anti-aliasing mode of
the given output device, and the destructor restores a hard-coded mode
instead of what was there before.

Due to this commit 5913506b2193e93ca2767ab7365ab2e76ed7848f turned off
anti-aliasing for FontWork objects simply by creating a
temporary VclPixelProcessor2D.

Change-Id: I7f7fcbf86b0dd425f599cd8e62fce3c69a2744bb
(cherry picked from commit 420aa16af0bbab4bdef80ceeb8d44cabe65840e0)